--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   jitsi_meet: ^4.0.0
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  google_sign_in: ^5.2.4
+  fluttertoast: ^8.0.9
+  cloud_firestore: ^3.1.17
+
 
 dev_dependencies:
   flutter_test:
