--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,4 +65,16 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Add the Firebase BoM (Bill of Materials)
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+
+    // Add the Firebase Analytics dependency
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    // Add the dependencies for any other desired Firebase products
+    // Example: implementation 'com.google.firebase:firebase-auth'
 }
+
+// Apply the Google services plugin
+apply plugin: 'com.google.gms.google-services'
